<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agro BD</string>
    <string name="action_settings">Settings</string>
    
    <string name="View_Static">Statistics</string>
    <string name="Crop_Info">Crop Information</string>
    <string name="Suggestion">Get Suggestion</string>
    <string name="Find_expert">Find Expert</string>
    <string name="About">About</string>
    <string name="piee">Show Pie Chart</string>
    

</resources>